# BitFun

./: .gitignore  AGENTS-CN.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/desktop/capabilities/: default.json
src/apps/desktop/src/: lib.rs  logging.rs  macos_menubar.rs  main.rs  theme.rs
src/apps/desktop/src/api/: agentic_api.rs  ai_memory_api.rs  ai_rules_api.rs  app_state.rs  clipboard_file_api.rs  commands.rs  config_api.rs  context_upload_api.rs  conversation_api.rs  diff_api.rs  dto.rs  git_agent_api.rs  git_api.rs  i18n_api.rs  image_analysis_api.rs  lsp_api.rs  lsp_workspace_api.rs  mcp_api.rs  mod.rs  project_context_api.rs  prompt_template_api.rs  skill_api.rs  snapshot_service.rs  startchat_agent_api.rs  storage_commands.rs  subagent_api.rs  system_api.rs  terminal_api.rs  tool_api.rs
src/apps/server/: Cargo.toml
src/apps/server/src/: main.rs
src/apps/server/src/routes/: api.rs  mod.rs  websocket.rs
src/crates/api-layer/: Cargo.toml
src/crates/api-layer/src/: dto.rs  handlers.rs  lib.rs
src/crates/core/: Cargo.toml  build.rs
src/crates/core/src/: lib.rs
src/crates/core/src/agentic/: mod.rs
src/crates/core/src/agentic/agents/: agentic_mode.rs  code_review_agent.rs  debug_mode.rs  explore_agent.rs  file_finder_agent.rs  generate_doc_agent.rs  mod.rs  plan_mode.rs  registry.rs
src/crates/core/src/agentic/agents/custom_subagents/: custom_subagent.rs  custom_subagent_loader.rs
src/crates/core/src/agentic/agents/prompt_builder/: mod.rs  prompt_builder.rs
src/crates/core/src/agentic/agents/prompts/: agentic_mode.md  code_review.md  debug_mode.md  explore_agent.md  generate_doc_agent.md  plan_mode.md
src/crates/core/src/agentic/coordination/: coordinator.rs  mod.rs
src/crates/core/src/agentic/core/: message.rs  messages_helper.rs  mod.rs  session.rs  state.rs
src/crates/core/src/agentic/events/: mod.rs  queue.rs
src/crates/core/src/agentic/execution/: execution_engine.rs  mod.rs  round_executor.rs  stream_processor.rs  types.rs
src/crates/core/src/agentic/image_analysis/: enhancer.rs  mod.rs  processor.rs  types.rs
src/crates/core/src/agentic/persistence/: manager.rs  mod.rs
src/crates/core/src/agentic/session/: compression_manager.rs  history_manager.rs  mod.rs  session_manager.rs
src/crates/core/src/agentic/tools/: framework.rs  image_context.rs  mod.rs  registry.rs  user_input_manager.rs
src/crates/core/src/agentic/tools/implementations/: analyze_image_tool.rs  ask_user_question_tool.rs  bash_tool.rs  code_review_tool.rs  create_plan_tool.rs  delete_file_tool.rs  file_edit_tool.rs  file_read_tool.rs  file_write_tool.rs  get_file_diff_tool.rs  git_tool.rs  glob_tool.rs  grep_tool.rs  ide_control_tool.rs  linter_tool.rs  log_tool.rs  ls_tool.rs  mermaid_interactive_tool.rs  mod.rs  skill_tool.rs  task_tool.rs  todo_write_tool.rs  util.rs  web_tools.rs
src/crates/core/src/agentic/tools/pipeline/: mod.rs  state_manager.rs  tool_pipeline.rs  types.rs
src/crates/core/src/agentic/util/: list_files.rs  mod.rs
src/crates/core/src/function_agents/: mod.rs
src/crates/core/src/function_agents/git-func-agent/: ai_service.rs  commit_generator.rs  context_analyzer.rs  mod.rs  types.rs  utils.rs
src/crates/core/src/function_agents/startchat-func-agent/: ai_service.rs  mod.rs  types.rs  work_state_analyzer.rs
src/crates/core/src/infrastructure/: mod.rs
src/crates/core/src/infrastructure/ai/: client.rs  client_factory.rs  mod.rs
src/crates/core/src/infrastructure/ai/ai_stream_handlers/: Cargo.toml
src/crates/core/src/infrastructure/ai/providers/: mod.rs
src/crates/core/src/infrastructure/debug_log/: http_server.rs  mod.rs  types.rs
src/crates/core/src/infrastructure/events/: event_system.rs  mod.rs
src/crates/core/src/infrastructure/filesystem/: file_operations.rs  file_tree.rs  file_watcher.rs  mod.rs  path_manager.rs
src/crates/core/src/infrastructure/storage/: cleanup.rs  mod.rs  persistence.rs
src/crates/core/src/infrastructure/workspace_path/: manager.rs  mod.rs
src/crates/core/src/service/: mod.rs
src/crates/core/src/service/ai_memory/: manager.rs  mod.rs  types.rs
src/crates/core/src/service/ai_rules/: mod.rs  service.rs  types.rs
src/crates/core/src/service/config/: global.rs  manager.rs  mod.rs  providers.rs  service.rs  tool_config_sync.rs  types.rs
src/crates/core/src/service/conversation/: converter.rs  mod.rs  persistence_manager.rs  types.rs
src/crates/core/src/service/diff/: service.rs  types.rs
src/crates/core/src/service/filesystem/: mod.rs  service.rs  types.rs
src/crates/core/src/service/git/: git_service.rs  git_types.rs  git_utils.rs  graph.rs
src/crates/core/src/service/i18n/: service.rs  types.rs
src/crates/core/src/service/lsp/: file_sync.rs  global.rs  manager.rs  plugin_loader.rs  process.rs  project_detector.rs  workspace_manager.rs
src/crates/core/src/service/mcp/: mod.rs
src/crates/core/src/service/mcp/adapter/: context.rs  mod.rs  prompt.rs  resource.rs  tool.rs
src/crates/core/src/service/mcp/config/: cursor_format.rs  (+2 more)
src/crates/core/src/service/project_context/: builtin_documents.rs  cancellation.rs  document_template.rs  generation_prompt.rs  mod.rs  service.rs  types.rs
src/crates/core/src/service/snapshot/: file_lock_manager.rs  isolation_manager.rs  manager.rs  mod.rs  service.rs  snapshot_core.rs  snapshot_system.rs
src/crates/core/src/service/system/: command.rs
src/crates/core/src/service/terminal/: Cargo.toml
src/crates/core/src/service/workspace/: context_generator.rs  manager.rs  mod.rs  provider.rs  service.rs
src/crates/core/src/util/: errors.rs  json_checker.rs  mod.rs  process_manager.rs  token_counter.rs
src/crates/core/src/util/types/: ai.rs  config.rs  event.rs  message.rs  mod.rs
src/crates/transport/: Cargo.toml
src/crates/transport/src/: emitter.rs  event_bus.rs  events.rs  lib.rs  traits.rs
src/crates/transport/src/adapters/: cli.rs  mod.rs  tauri.rs  websocket.rs
(+914 files in other folders)
