[workspace]
members = [
    "src/crates/events",
    "src/crates/core",
    "src/crates/transport",
    "src/crates/api-layer",
    "src/apps/cli",
    "src/apps/desktop",
    "src/apps/server",
]

resolver = "2"

# Shared package metadata — single source of truth for version
[workspace.package]
version = "0.1.0" # x-release-please-version
authors = ["BitFun Team"]
edition = "2021"

# Shared dependency versions to keep all crates aligned
[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1.10"
base64 = "0.21"
md5 = "0.7"
once_cell = "1.19.0"
lazy_static = "1.4"
dashmap = "5.5"
indexmap = "2.6"
num_cpus = "1.16"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }

# Debug Log HTTP Server
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# File system
glob = "0.3"
ignore = "0.4"
notify = "6.1"
dirs = "5.0"
dunce = "1.0.5"
filetime = "0.2"
zip = "0.6" # plugin load
flate2 = "1.0"
toml = "0.8"

# Git
git2 = { version = "0.18", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }

# Terminal
portable-pty = "0.8"
vte = "0.15.0"

# Grep (search)
grep-searcher = "0.1"
grep-regex = "0.1"
globset = "0.4"

# SSE
eventsource-stream = "0.2.3"

# Command detection (cross-platform)
which = "8.0"
similar = "2.5"

# Tauri (desktop only)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-build = { version = "2", features = [] }

# Windows-specific dependencies
win32job = "2.0"

# I18n internationalization
fluent-bundle = "0.15"
unic-langid = "0.9"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

