[package]
name = "bitfun-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Core Library - Platform-agnostic business logic"

[lib]
name = "bitfun_core"
crate-type = ["rlib"]

[dependencies]
# Inherit shared dependencies from workspace
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

log = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }

reqwest = { workspace = true }

# Debug Log HTTP Server
axum = { workspace = true }
tower-http = { workspace = true }

glob = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
filetime = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }

git2 = { workspace = true }
portable-pty = { workspace = true }

# Command detection (cross-platform)
which = { workspace = true }
similar = { workspace = true }

grep-searcher = { workspace = true }
grep-regex = { workspace = true }
globset = { workspace = true }

eventsource-stream = { workspace = true }

# AI stream processor - local sub-crate
ai_stream_handlers = { path = "src/infrastructure/ai/ai_stream_handlers" }

# Tool runtime
tool-runtime = { path = "src/agentic/tools/implementations/tool-runtime" }

# terminal
terminal-core = { path = "src/service/terminal" }

# I18n internationalization
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }

# Event layer dependency (lowest layer)
bitfun-events = { path = "../events" }

# Transport layer dependency
bitfun-transport = { path = "../transport" }

# Tauri dependency (optional, enabled only when needed)
tauri = { workspace = true, optional = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }

[features]
default = []
tauri-support = ["tauri"]  # Optional tauri support

