[package]
name = "terminal-core"
version = "0.1.0"
edition = "2021"
description = "A standalone terminal module"
authors = ["BitFun Team"]

[lib]
name = "terminal_core"
path = "src/lib.rs"

[dependencies]
# PTY support
portable-pty = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# UUID for session IDs
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Platform directories
dirs = { workspace = true }

[dev-dependencies]

