[package]
name = "ai_stream_handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
